wip separate dataset and volume size
